# CS335-Procedural-Terrain-Generation

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
build_local/: CMakeCache.txt  Makefile  cmake_install.cmake  procedural_terrain
include/: Camera.h  MarchingCubes.h  MeshData.h  Shader.h  Terrain.h
shaders/: basic.frag  basic.vert  sky.frag  sky.vert
src/: Camera.cpp  MarchingCubes.cpp  Shader.cpp  Terrain.cpp  main.cpp
